--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
+<section class="chamada">
+    <div class="chamada-texto">
+        <h1>CostaGold - N.A.D.A.B.O.M. [part. 2] (ft Don L & Luccas Carlos) [prod. Lotto]</h1>
+        <p>#CostaGold</p>
+    </div>
 
+    <div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/IaRYwEECq-E?si=KgwdFI4rfQr5__Rk" 
+        title="YouTube video player" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-  write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  
+    </div>
+</section>
+
+<section class="categoria">
+    <h2>Outras musicas</h2>
+    <div class="categoria-videos">
+        <a href="https://www.youtube.com/watch?v=ugOmV9yBoNo">
+            <img src="https://img.youtube.com/vi/ugOmV9yBoNo/maxresdefault.jpg" />
+        </a>
+        <a href="https://www.youtube.com/watch?v=V3H8ZM6nC_4">
+            <img src="https://img.youtube.com/vi/V3H8ZM6nC_4/maxresdefault.jpg" />
+        </a>
+        <a href="https://www.youtube.com/watch?v=TXnbX3GaGVs">
+            <img src="https://img.youtube.com/vi/TXnbX3GaGVs/maxresdefault.jpg" />
+        </a>
+        <a href="https://www.youtube.com/watch?v=watch?v=3JeHfhW9uWU">
+            <img src="https://img.youtube.com/vi/watch?v=3JeHfhW9uWU/maxresdefault.jpg" />
+        </a>
+        <a href="https://www.youtube.com/watch?v=dgn0egjhDJs">
+            <img src="https://img.youtube.com/vi/dgn0egjhDJs/maxresdefault.jpg" />
+        </a>
+    </div>
+</section>
